RESOLVED FIXED280444
[scroll-animations] Fix computeViewTimelineData calculation
https://bugs.webkit.org/show_bug.cgi?id=280444
Summary [scroll-animations] Fix computeViewTimelineData calculation
Nikos Mouchtaris
Reported 2024-09-26 16:45:05 PDT
[scroll-animations] Fix computeViewTimelineData calculation
Attachments
Radar WebKit Bug Importer
Comment 1 2024-09-26 16:47:21 PDT
Nikos Mouchtaris
Comment 2 2024-09-26 16:58:17 PDT
EWS
Comment 3 2024-09-27 16:41:41 PDT
Committed 284398@main (9ed7eb275fc9): <https://commits.webkit.org/284398@main> Reviewed commits have been landed. Closing PR #34332 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.